# mcp-ai-poc

./: .gitignore  LICENSE  README.md  mcp_config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT.md  EXAMPLES.md  TROUBLESHOOTING.md
scripts/: build.sh  install_deps.sh
src/: run.py  test_server.py
src/mcp_poc/: __init__.py  ai_tools.py  app.py  mcp_server.py  standalone_server.py
src/tests/: test_app.py  test_server.py
